--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -209,7 +209,8 @@ input[type=text], select, textarea {
 }
 
 /* Style the submit button with a specific background color etc */
-input[type=submit] {
+/*input[type=submit] 8*/
+.btn {
   background-color: #000000;
   color: white;
   padding: 12px 20px;
@@ -219,7 +220,7 @@ input[type=submit] {
 }
 
 /* When moving the mouse over the submit button, add a brown/greige color */
-input[type=submit]:hover {
+.btn:hover {
   background-color: #D8D2CB;
 }
 
